Mon, 22 Jan 2007 13:07:51 +0100 <thp@perli.net>
        * doc/dev/redhat-wget-output.txt: Added info about the modified 
          "wget" in RedHat/Fedora Core, based on Nick's mailing list 
          discussion thread of January 2007
        * src/gpodder/libwget.py: Applied slightly modified patch from 
          Nick (nikosapi gmail com) to add support for Fedora's custom 
          wget version so that the speed can be detected on Fedora Core 
          desktops (should also enable RHEL workstations)
        * bin/gpodder: version + rel.date

Wed, 17 Jan 2007 19:09:27 +0100 <thp@perli.net>
        * src/gpodder/libwget.py: Set transfer timeout to 15 seconds when 
          downloading with wget (thanks to Nick [nikosapi gmail com] again 
          for suggesting this and thanks for testing gPodder :)
        * bin/gpodder: version + release date bump :)

Tue, 16 Jan 2007 19:26:50 +0100 <thp@perli.net>
        * src/gpodder/libipodsync.py: Nick (nikosapi gmail com) reported 
          that when compiling PyID3 from source, its name will be lowercase, 
          so we simply check for both cases now (all uppercase/all lowercase)
          and try to cope with both possibilities. Why is the naming different 
          from distro to distro, anyway? ;)
        * bin/gpodder: version + release date bump

Mon, 15 Jan 2007 21:06:41 +0100 <thp@perli.net>
        * src/gpodder/libopmlreader.py: Fixed a small bug, thanks (again) 
          to Nick [nikosapi gmail com] for pointing that out :)

Mon, 15 Jan 2007 19:09:57 +0100 <thp@perli.net>
        * src/gpodder/libgpodder.py: Fixed a bug with the download dir when 
          starting off with a fresh gPodder install (thanks to Nick [nikosapi 
          gmail com] for reporting)
        * bin/gpodder: bumped version + release date

Wed, 10 Jan 2007 18:47:26 +0100 <thp@perli.net>
        * data/po/pt.po: Updated pt_PT translation (thanks to Joel Calado)

Sat,  6 Jan 2007 15:33:33 +0100 <thp@perli.net>