@@ -15,6 +15,7 @@ Thanks to all the other patch writers:
   Camille Moncelier <pix@devlife.org> (patch for iPod video device support)
   Nick <nikosapi@gmail.com> (many patches for iPod 5G support + mplayer-length)
   Seth Remington <sremington@saberlogic.com> (several important bugfixes)
+  Robert Young <robertkyoung@gmail.com> (path fix patch for MP3 player sync)
 
 
 Thanks for bug reports and other suggestions go out to:
