@@ -1,3 +1,9 @@
+Mon, 22 Jan 2007 13:15:11 +0100 <thp@perli.net>
+        * src/gpodder/libipodsync.py: Fix based on a patch from Robert
+          Young (robertkyoung gmail.com) to replace special characters 
+          in channel folder name on MP3 player sync
+        * AUTHORS: added Robert Young to list of patch writers
+
 Mon, 22 Jan 2007 13:07:51 +0100 <thp@perli.net>
         * doc/dev/redhat-wget-output.txt: Added info about the modified 
           "wget" in RedHat/Fedora Core, based on Nick's mailing list 
